# 3DTestbed

./: .gitignore  CMakeLists.txt
include/: 3DTestbed.h  IndexBuffer.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
include/tests/: Test.h  Test3DScene.h  TestClearcolor.h  TestTexture2D.h
include/tests/geometries/: cylinder.h  geometry.h  sphere.h  triangle.h
src/: Application.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
src/tests/: Test.cpp  Test3DScene.cpp  TestClearColor.cpp  TestTexture2D.cpp
src/tests/geometries/: cylinder.cpp  geometry.cpp  sphere.cpp  triangle.cpp
